--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <section id="navbar">
         <div class="container-fluid px-3 py-2 holding-container">
             <a href="">
-                <img class="logo-img" src="img/undraw_teaching_f1cm.svg" alt="">
+                <img class="logo-img" src="img/unnamed.png" alt=""> <span style="
+                    font-size: 18px; font-weight: 700; color: blue
+                    ">Neutrix</span>
             </a>
             <ul class="hamburger">
                 <li id="navMenu">
@@ -188,22 +190,24 @@
     <section id="footer" style="background: blue" class="py-5 mt-5">
         <div class="container">
             <div class="footer-head">
-                <h1 class="h1-responsive footer-text text-left">
+                <h1 class="h1-responsive footer-text text-left py-3">
                      Wanna experience the <br> thrill?
                 </h1>
 
-                <p class="footer-paragraph">
-                    lerem ipsum dolor isit amit vani um itit anim bei nam du cara sit
-                </p>
-                <p class="footer-paragraph">
-                    Say Hi @ <span style="font-weight: bold">example@gmail.com</span> <br> or call 
-                    <span style="font-weight: bold">+2345-6789-012</span>
-                    
-                </p>
-                <div class="link-to-contact my-4">
+                <div class="py-2">
+                    <p class="footer-paragraph">
+                            lerem ipsum dolor isit amit vani um itit anim bei nam du cara sit
+                    </p>
+                    <p class="footer-paragraph">
+                        Say Hi @ <span style="font-weight: bold">example@gmail.com</span> <br> or call 
+                        <span style="font-weight: bold">+2345-6789-012</span>    
+                    </p>
+                </div>
+                <div class="link-to-contact my-5">
                         <a href="#contact" class="footer-button my-3">Contact us</a>
                 </div>
-                <div class="social-links">
+
+                <div class="social-links my-3">
                     <a href="https://https://web.facebook.com/m.dantereus">
                         <i class="fa fa-facebook"></i>
                     </a>
@@ -213,8 +217,8 @@
                     <a href="https://wa.me/08100676657?text=I'm%20interested%20in%20your%20company%">
                         <i class="fa fa-whatsapp"></i>
                     </a>
-                    <a href="">
-                        <i class="fa fa-github"></i>
+                    <a href="mailto: dantereus1@gmail.com">
+                        <i class="fa fa-at"></i>
                     </a>
                 </div>
             </div>
